stage 4.2: track NSWindow-reflection helper as TD-1 in stage plan
The current MacOsAlwaysOnTopOverFullScreen reaches into JDK internals
(sun.awt.AWTAccessor, sun.lwawt.LWWindowPeer, sun.lwawt.macosx.
CFRetainedResource) via reflection. Works today but is fragile across
JDK upgrades and JEP 403 trends point at eventual hard-blocking of
--add-opens for internals.

Recorded as "TD-1" in ai_stages/042_browser_picker_popup/plan.md under a
new "Future work / Technical debt" section, with two migration
candidates (rococoa for typed Cocoa bindings, or a native .dylib shim
called via JNA) plus acceptance criteria. Code KDoc on the helper
points at the same TD entry. Trigger is "before public release /
packaging" — until then the graceful fallback (picker still shows,
just under fullscreen apps) keeps things safe.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>